# AI-in-Classics

./: #GREEK #AI #ML.lnk  .dockerignore  .flake8  .gitignore  .jupyterlite.doit.db  AI-in-Classic-Push - Shortcut.lnk  Dockerfile  GREEK_LEMMATIZER_PR.md  LICENSE  Makefile  README.md  azure-pipelines.yml  build.sh  clean_directory.py  clean_xml.py  cleanupXML.py  greek-nlp-requirements.txt  package-lock.json  package.json  pyabsarequirements.txt  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  upload_model.py
.devcontainer/: devcontainer.json
.github/workflows/: mainCi.yml  model_testing.yml
cleaned_xml/: ggm0001ggm0011st1K-grc1.txt  ogl0001ogl0011st1K-grc1.txt  stoa0033atlg0281st1K-grc1.txt  stoa0033atlg0431st1K-grc1.txt  stoa0121stoa001opp-grc1.txt  stoa0146dstoa001opp-grc1.txt  tlg0005tlg0031st1K-grc1.txt  tlg0011tlg0031st1K-grc1.txt  tlg0015tlg001opp-grc1.txt  tlg0018tlg001opp-grc1.txt  tlg0018tlg002opp-grc1.txt  tlg0018tlg003opp-grc1.txt  tlg0018tlg004opp-grc1.txt  tlg0018tlg005opp-grc1.txt  tlg0018tlg006opp-grc1.txt  tlg0018tlg007opp-grc1.txt  tlg0018tlg008opp-grc1.txt  tlg0018tlg009opp-grc1.txt  tlg0018tlg010opp-grc1.txt  tlg0018tlg011opp-grc1.txt  tlg0018tlg012opp-grc1.txt  tlg0018tlg013opp-grc1.txt  tlg0018tlg014opp-grc1.txt  tlg0018tlg015opp-grc1.txt  tlg0018tlg016opp-grc1.txt  tlg0018tlg017opp-grc1.txt  tlg0018tlg018opp-grc1.txt  tlg0018tlg019opp-grc1.txt  tlg0018tlg020opp-grc1.txt  tlg0018tlg021opp-grc1.txt  tlg0018tlg022opp-grc1.txt  tlg0018tlg023opp-grc1.txt  tlg0018tlg024opp-grc1.txt  tlg0018tlg025opp-grc1.txt  tlg0018tlg026opp-grc1.txt  tlg0018tlg027opp-grc1.txt  tlg0018tlg028opp-grc1.txt  tlg0018tlg029opp-grc1.txt  tlg0018tlg030opp-grc1.txt  tlg0018tlg031opp-grc1.txt  (+884 more)
docs/: README.md  contributing.md  dev.md  howto.md  model_registry_overview.md  ollama.md  xml_clean.md
greek-nlp-venv/Scripts/: activate  activate.bat  get_gprof  get_objgraph  undill
models/greek_model/: Modelfile
models/latin_model/: Modelfile  download.sh
original_xml/Part1/: tlg0086tlg0031st1K-grc2.xml
original_xml/Part2/: tlg0090tlg001opp-grc9.xml
original_xml/Part3/: tlg0643opp0031st1K-grc1.xml  tlg0643tlg0011st1K-grc1.xml  tlg0643tlg0011st1K-grc2.xml  tlg0643tlg0021st1K-grc1.xml  tlg1409opp0031st1K-grc1.xml
original_xml/script_test/: test-grc.xml
research-website/: app.py  db_query.py
research-website/instance/: adopt-a-planet.db
research-website/templates/: base.html  dashboard.html  display.html  header.html
src/: First1KGreek_table.html  Latin_List.docx  UpdatedDocTermMatrix.py  metadata.csv
src/Lemmatizer-GRK-CLTK/: GreekCLTKLemmatizer.py  lemmatize_to_csv.py  run-cltk-lemmatizer.py  (+1 more)
tests/: LatinParagraphsTestData.json  LatinSentenceTestDatav2.json  LatinSentencesTestData.json  Latin_Sentiment_Paragraphs.py  Latin_Sentiment_Sentences_Test_Cases.py  conftest.py  test_basic.py  test_cleanupXML.py  test_greek_sentiment.py  test_latin_sentiment.py  test_lemmatizer_cache.py
venv-greek-nlp/: pyvenv.cfg
(+17850 files in other folders)
