[tool.poetry]
name = "trojan-parse-project"
version = "0.1.0"
description = ""
authors = ["alex <53851759+alxxjohn@users.noreply.github.com>"]
readme = "README.md"
extend-exclude = '''
(
  \.venv
| venv
| node_modules
| \.mypy_cache
| \.pytest_cache
| build
| dist
| \.ipynb_checkpoints
| .*\.ipynb
)
'''


[tool.poetry.dependencies]
python = "^3.9"

beautifulsoup4 = "*"
bidict = "*"
cltk = "<1.0"
dill = "*"
ipycache = "*"
ipywidgets = "*"
fastparquet = "*"
googletrans = "3.1.0a0"   
graphviz = "*"
matplotlib = "*"
networkx = "*"
numpy = "*"
pandas = "*"
pyarrow = "*"
pydot = "*"
python-dotenv = "*"
spacy = "*"
scikit-learn = "*"
streamlit = "*"
termcolor = "^3.1.0"
altair = ">=4.2,<5"
flake8 = "^7.3.0"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = {extras = ["jupyter"], version = "^25.1.0"}
pytest = "*"
isort = "^6.0.1"
