[tool.poetry]
name = "trojan-parse-project"
version = "0.1.0"
description = ""
authors = ["alex <53851759+alxxjohn@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "app", from = "src" }]


[tool.poetry.dependencies]

python = ">=3.9,<3.12" 

beautifulsoup4 = "*"
bidict = "*"
cltk = "1.5.0"
click = "<8.1"
dill = "*"
ipycache = "*"
ipywidgets = "*"
fastparquet = "*"
graphviz = "*"
matplotlib = "*"
networkx = "*"
numpy = "*"
pandas = "*"
pyarrow = "*"
pydot = "*"
python-dotenv = "*"
spacy = "*"
scikit-learn = "*"
streamlit = "*"
termcolor = "^3.1.0"
altair = ">=4.2,<5"
protobuf = "==3.20.3"
urllib3 = "<2"
deep-translator = "^1.11.4"
ollama = "^0.5.4"
pypdf = "^6.1.0"
vaderSentiment = "^3.3.2"
fastapi = "^0.120.3"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.12.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = {extras = ["jupyter"], version = "^25.1.0"}
pytest = "*"
isort = "^6.0.1"

